--- a/closetshare.html
+++ b/closetshare.html
@@ -122,7 +122,7 @@
         </div>
         <div id = "closetshare-overview-image" class = "image-with-caption">
           <img src="resources/closetshare/closetshare intro screens.png" alt="ClosetShare Intro Screens"></img>
-          <figcaption> The app's onboarding screens for introduction, created by my partner Dennis Deng</figcaption>
+          <figcaption> The app's onboarding screens for introduction, created by my partner Dennis Deng.</figcaption>
         </div>
       </div>
 
@@ -187,8 +187,8 @@
           <div>
             <h2>Initial App UI/UX Sketches</h2>
             <p>
-              With a finalized app concept, and a list of features that the app should implement, I created sketches of how the UI will look
-               like for core user activities. This includes the home page, where outfit browsing will take place, as well as detailed outfit
+              With a finalized app concept and a list of featurest, I created UI sketches for
+              core user activities. This includes the home page, where outfit browsing will take place, as well as detailed outfit
                 views and outfit creation.
             </p>
           </div>
@@ -221,13 +221,12 @@
             </p>
             <p>
               For these purposes, I proposed using a <strong>vibrant purple</strong>, a color that often represents luxury and royalty, as the app’s 
-              highlight color. At the same time, keep the <strong>rest of the app visuals neutral and subtle</strong> to help push the outfit pictures 
+              highlight color. The rest of the app visuals were kept <strong>neutral and subtle</strong> to help push the outfit pictures 
               as primary focuses. 
             </p>
             <p>
-              For typography, I selected <strong>Poppins for titles and Nunito for body text and captions</strong>. The fonts help conveys a sense of 
-              <strong>elegance and clarity, while still feeling friendly and minimalistic</strong>, complementing the visual identity that we had 
-              envisioned.
+              For typography, I selected <strong>Poppins for titles and Nunito for body text and captions</strong>. They conveys a sense of 
+              <strong>elegance and clarity, while still feeling friendly and minimalistic</strong>.
             </p>
           </div>
         </div>
@@ -405,10 +404,10 @@
         issues</strong> is an important skill to have.
       </p>
       <p>
-        One major issue that arise was our initial plan to only utilize Firebase for outfit data storage. Later in the development process, 
-        we found that image data is too big for the limited amount of external storage we have access to via Firebase. So we had to repivot
-         and seek alternative means of image storage instead. Consequently, I <strong>allocated time during development for research of other 
-         external storage means, and Imgur API’s integration</strong> after I’ve chosen it for its unlimited storage space.
+        Such as our initial plan to only utilize Firebase for outfit data storage. During development
+        we've found that image data is too big for the limited amount of external storage we have access to via Firebase. Therefore, 
+        I needed to <strong>allocated time during development to research and implement other external storage means</strong>, which I managed to pull through
+        by integrating Imgur API.
       </p>
     </div>
 
@@ -417,7 +416,7 @@
       <div id = "closetshare-reflection-B-content" class = "grid-area">
         <div>
           <p>
-            As the project encompasses both design and development, any design that I’ve made, I’ll need to make it a reality through code. 
+            Any design that I’ve made will also need to be implemented through code. 
             Due to the project having a strict time limit, there were occasions where I had to opt for a simpler approach for design 
             implementations.
           </p>
@@ -427,9 +426,9 @@
              As a result, a simpler parallel layout was used for the final prototype.
           </p>
           <p>
-            One key takeaway is that <strong>development feasibility is something that should also be taken into account during initial ideation steps</strong>, 
-            especially when constraints are in play. If we had more time however, we would definitely prioritize implementing all finalized design choices, as well as
-            tackle some current visual consistency issues.
+            <strong>Development feasibility is something that should also be taken into account during initial ideation steps</strong>, 
+            especially when constraints are in play. If we had more time however, we would definitely prioritize implementing all envisioned design choices, and resolve
+             current visual consistency issues.
           </p>
         </div>
         <div class = "image-with-frame">
