--- a/rabbitats.html
+++ b/rabbitats.html
@@ -194,8 +194,8 @@
       <!-- brief intro-->
       <div class = "highlight-area sub-section">
        <p>
-        Upon extensive research on the organization, the context, and the website itself, I’ve proposed <strong>two main problems</strong> of the current 
-        website in which we can effectively and realistically resolve given the various constraints.
+        With our combined research data, I proposed <strong>two main problems</strong> with the current 
+        website that we can effectively and realistically resolve given the various constraints.
        </p>
       </div>
 
@@ -208,11 +208,11 @@
               <span class="number-title">01</span>
               <div>
                 <h2>Education not given prominence and is given a lower hierarchy</h2>
-                <p>Looking more into the wild rabbit epidemic in the greater Metro Vancouver area, one main source for this can be traced back 
-                  to pet abandonment caused by a lack of knowledge when it comes to rabbit keeping. This, on top of Rabbitats goals, means that
-                    education should be a key aspect of the webpage.</p>
-                <p>Yet despite education having its own page, this <strong>entire aspect of the page is barely showcased and promoted on the home page</strong>, 
-                  in which heavily reduces engagement. Instead, the focus is placed on the other 3 areas, recruiting volunteers, donations, and 
+                <p>Pne main source for the wild rabbit epidemic in the greater Metro Vancouver area can be traced back 
+                  to pet abandonment caused by a lack of reliable rabbit keeping knowledge. Considering Rabbitats goals, 
+                    <strong>education</strong> should be a key aspect of the webpage.</p>
+                <p>While the site has a page dedicated to education, the <strong>education aspect is barely showcased and promoted on the home page</strong>, 
+                  which reduces user engagement. Instead, the focus is placed on the other 3 areas, recruiting volunteers, donations, and 
                   adoptions.</p>
               </div>
             </div>
@@ -268,7 +268,7 @@
       <h1>Design Iterations </h1>
       <div class = "highlight-area sub-section">
         <p>
-          Throughout the iterative process, I <strong>pioneered and guided the group’s design direction</strong> through my research and leadership skills. 
+          Throughout the iterative process, I <strong>pioneered and guided the group’s design direction</strong>. 
           My input through iterations was grounded from my research and understanding of Rabbitats, its target audience, and its context. 
           I also facilitated group discussions and encouraged collaboration.
         </p>
@@ -337,6 +337,7 @@
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
       <div class = "sub-section">
+        <h2>Constraints are important</h2>
         <p>
           This month long project is one of my first cracks into a time based collaborative design project, as well as the experience of 
           playing more of a leadership role. 
@@ -347,6 +348,9 @@
           of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
           effective redesign.
         </p>
+      </div>
+      <div class = "sub-section">
+        <h2>Proper research lead to personalized design solutions</h2>
         <p>
           Another key is the <strong>importance of proper research</strong>, and the need to <strong>personalize the design strategy for each client</strong>. The main problems
            and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
