--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -155,7 +155,7 @@
         <div>
           <h2>Wealthsimple: Our Design Platform</h2>
           <p>To best tackle this problem, I <strong>advocated for exploring existing investment related platforms as points of intervention</strong> over 
-            designing a new platform, and consequently finalized Wealthsimple as our design platform.</p>
+            designing a new one, and finalized Wealthsimple as that platform.</p>
           <p><strong>Wealthsimple</strong> is a Canadian platform that provides investment services to the public, with the aim to help everyone achieve 
             financial freedom. It was a popular platform referenced within our questionnaire responses. Online consensus gathered from 
             initial research also indicates Wealthsimple as a popular starting point for investing among youth.</p>
@@ -181,13 +181,13 @@
 
       <div class = "sub-section">
         <p>
-          With the design question in mind, the team navigated the Wealthsimple app to collect insights and perform extensive user experience 
-          evaluations, at the same time performed HCI research. My research domain for this phase of the project comprised of <strong>visual 
+         The team navigated the Wealthsimple app to collect insights and perform UX
+          evaluations, while performed HCI research for possible solutions. My research domain for this phase of the project comprised of <strong>visual 
           analytics, distributed cognition frameworks, mental models, and information foraging theory.</strong>
         </p>
         <p>
-          While other team members were able to collect first hand perspective of a new user, as an experienced Wealthsimple user and 
-          investor, I was able to <strong>provide additional insights based on my personal experience and investment related knowledge. </strong>
+          As an experienced Wealthsimple user, I was also able to <strong>provide additional insights based on my personal experience and investment related 
+          knowledge</strong> while other team members contributed to documenting perspectives from a new user's point of view.
         </p>
       </div>
 
@@ -204,12 +204,11 @@
               towards poorer decision-making specifically with risk analysis, and increased difficulty to absorb new information. 
             </p>
             <p>
-              With this in mind, our investigation into new user perspectives suggests that Wealthsimple’s interface is overwhelming beginner users with 
-              <strong>plentiful of unknown numbers, terms, and acronyms which heavily strains working memory.</strong> 
+              Wealthsimple’s interface overwhelms beginner users with 
+              <strong>plentiful of unknown numbers, terms, and acronyms which strains working memory.</strong> 
             </p>
             <p>
-              Moreover, I’ve also noted that the Wealthsimple interface have <strong>done little in terms of cues</strong> that can help direct users, or help with information 
-              understanding. 
+             The interface have also <strong>done little in terms of cues</strong> that can help direct users or help with understanding. 
             </p>
           </div>
         </div>
@@ -249,14 +248,10 @@
             <div>
               <h2>Individual Based Cognitive Process</h2>
               <p>
-                Theories have proposed that it is possible to offload internal mental tasks by relying on external social agents or the 
-                environment (interface) to ease the cognitive burden. 
-              </p>
-              <p>
-                However, Investing as a process is quite <strong>individual oriented</strong> with social collaboration being largely absent due to investing’s
-                private nature. Additionally, investing suffers from a <strong>fragmented environment</strong> where 
-                investors need to evaluate a large number of external sources such as online forums, videos, financial news, and more to make 
-                an educated decision.
+                Support from external sources are hard to come by for newer investors. The process of investing is quite <strong>individual oriented</strong> 
+                with social collaboration being largely absent due to its
+                private nature. Additionally,  <strong>fragmented sources of information</strong> complicates decision making, as
+                investors need to evaluate a large number of external sources such as online forums, videos, financial news.
               </p>
             </div>
           </div>
@@ -343,7 +338,7 @@
             <h2>Improved Interactable Portfolio Holdings</h2>
           </div>
           <p>
-            I’ve also advocated for transforming the portfolio holdings screen from a simple list into a <strong>visualized and 
+            I advocated for transforming the portfolio holdings screen from a simple list into a <strong>visualized and 
             interactable pie chart</strong>, a more accurate and recognizable form of representation that organized information into <strong>clear 
             categories</strong>. Users can also choose between different methods of categorization or switch back to
             the classic list view via a toggle.
@@ -375,7 +370,7 @@
             <h2>Opt In Portfolio Sharing Feature</h2>
           </div>
           <p>
-            To allow collaboration between different users to offload the mental load, I also proposed an optional community based feature 
+            To allow collaboration between different users to offload the mental load, I proposed an optional community based feature 
             that allows users to <strong>share their own portfolios</strong> and receive collaborative feedback through likes, Q&As, and other user comments.
              Users can also view other shared portfolios and ask questions as an <strong>information source.</strong>
           </p>
@@ -406,7 +401,7 @@
             <h2>Revised Portfolio Performance Chart</h2>
           </div>
           <p>
-            I also redesigned Wealthsimple’s performance chart to communicate more information through visuals in a digestible manner. 
+            I redesigned Wealthsimple’s performance chart to communicate more information through visuals in a digestible manner. 
             I’ve added more <strong>relevant data visualization and supporting elements</strong> to help with understanding.
           </p>
         </div>
@@ -414,11 +409,11 @@
         <div id = "wealthsimple-fourth-solution-images" class = "grid-area">
           <div class = "image-with-caption">
             <img src="resources/wealthsimple/wealthsimple performance graph - before.png" alt="Current Wealthsimple interface with limited cues"></img>
-            <figcaption>Before, the current Wealthsimple interface with limited cues</figcaption>
+            <figcaption>Before, the graph's minimalistic design communnicates very little.</figcaption>
           </div>
           <div class = "image-with-caption">
             <img src="resources/wealthsimple/wealthsimple performance graph - after.png" alt="mockups of the new interface with added Cues to assist users."></img>
-            <figcaption>After, the new interface with added cues to assist users.</figcaption>
+            <figcaption>After, more tools are provided to help evaluate performance through additional elements and visuals.</figcaption>
           </div>
         </div>
        
