home title respnosiveness change

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section id = "introduction" class = "grid-area">
           <div id = "introduction-left">
             <div id = "title-heading">
-              <h1 id = "heading-hello-howard">I'm Howard......</h1>
+              <h1 id = "heading-hello-howard">I'm Howard, a......</h1>
               <div id ="heading-digital-product-designer">
                 <h1>DIGITAL</h1>
                 <h1>PRODUCT</h1>
