--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <h1 id = "heading-hello-howard">I'm Howard, a......</h1>
               <div id ="heading-digital-product-designer">
                 <h1>DIGITAL</h1>
-                <h1>PRODUCT</h1>
+                <h1>PRODU<span class = "kern-CT">C</span>T</h1>
                 <h1><strong>DESIGNER</strong></h1>
               </div>
             </div>
