Refined project section for home page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@
                 <h2>ClosetShare</h2>
                 <p>/2024</p>
               </div>
-              <p>A cross-platform social app developed using React Native that helps and encourages users to improve their own fashion sense, find their own unique style, and form fashion communities.</p>
-              <div class = "project-select-icon"></div>
+              <p>Cross-platform social app that helps users explore fashion, define their style, and connect with like-minded communities.</p>
+              <div class = "project-right-bottom">
+                <div class = "project-tag-list">
+                  <h3 class = "project-tag">Mobile Development</h3>
+                  <h3 class = "project-tag">UI/UX Design</h3>
+                </div>
+                <div class = "project-select-icon"></div>
+              </div>
             </div>
           </a> <!--closetshare-->
 
@@ -89,8 +95,14 @@
                 <h2>Wealthsimple Redesign Proposal</h2>
                 <p>/2024</p>
               </div>
-              <p>A number of redesigns and proposed new features for the investing app Wealthsimple based on extensive HCI research. With the objective to encourage and support youth to invest early by reducing cognitive load throughout the app experience.</p>
-              <div class = "project-select-icon"></div>
+              <p>Wealthsimple redesign and new feature proposals aimed at helping young users navigate the complexities of investing.</p>
+              <div class = "project-right-bottom">
+                <div class = "project-tag-list">
+                  <h3 class = "project-tag">HCI Research</h3>
+                  <h3 class = "project-tag">UI/UX Design</h3>
+                </div>
+                <div class = "project-select-icon"></div>
+              </div>
             </div>
           </a> <!--wealthsimple-->
 
@@ -101,8 +113,14 @@
                 <h2>CraftConnect</h2>
                 <p>/2024</p>
               </div>
-              <p>Design aim to help artisans find and retain their unique customer base, a web platform concept that allows handcraft consumers to discover and connect with local artisans they like.</p>
-              <div class = "project-select-icon"></div>
+              <p>Web platform aimed to help artisans find and retain their unique customer base, connecting handcraft consumers and local artisans.</p>
+              <div class = "project-right-bottom">
+                <div class = "project-tag-list">
+                  <h3 class = "project-tag">User Research</h3>
+                  <h3 class = "project-tag">UI/UX Design</h3>
+                </div>
+                <div class = "project-select-icon"></div>
+              </div>
             </div>
           </a> <!-- craftconnect -->
           
@@ -113,8 +131,14 @@
                 <h2>Rabbitats Website Redesign</h2>
                 <p>/2023</p>
               </div>
-              <p>Strategy to improve the organization website for the rabbit rescue society Rabbitats through highlighting its education aspects.</p>
-              <div class = "project-select-icon"></div>
+              <p>Strategy to improve Rabbitats’ website by highlighting its educational content.</p>
+              <div class = "project-right-bottom">
+                <div class = "project-tag-list">
+                  <h3 class = "project-tag">User Research</h3>
+                  <h3 class = "project-tag">UI/UX Design</h3>
+                </div>
+                <div class = "project-select-icon"></div>
+              </div>
             </div>
           </a> <!-- rabbitat -->
           
@@ -125,8 +149,14 @@
                 <h2>Macaron</h2>
                 <p>/2024</p>
               </div>
-              <p>A brand and website that aims to provide a seamingless and satisfying macaron purchase experience, while preserving its visual identity.</p>
-              <div class = "project-select-icon"></div>
+              <p>Macaron store website that strengthens branding and provides a satisfying shopping experience.</p>
+              <div class = "project-right-bottom">
+                <div class = "project-tag-list">
+                  <h3 class = "project-tag">Web Development</h3>
+                  <h3 class = "project-tag">UI/UX Design</h3>
+                </div>
+                <div class = "project-select-icon"></div>
+              </div>
             </div>
           </a> <!-- macaron -->
 
